<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.personal.test.formatphone.Options"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/want"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="#02000d"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/formatbtn"
        android:background="@drawable/buttonstyle"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:textColor="#f4efef"
        android:id="@+id/deletePhotobtn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/getAphoto"
        android:background="@drawable/buttonstyle"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:textColor="#f4efef"
        android:id="@+id/takePhotobtn"
        android:onClick="gotoGetPhotos"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/captureAphoto"
        android:background="@drawable/buttonstyle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:textColor="#f4efef"
        android:id="@+id/capturePhotobtn"
        android:onClick="gotoTakePhoto"/>

</LinearLayout>
