<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.personal.test.formatphone.LogIn"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="@drawable/background2"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logInText"
        android:textColor="#02000d"
        android:textSize="40sp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:textSize="25sp"
            android:paddingLeft="15dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:textColorHint="#2c3240"/>

        <EditText
            android:id="@+id/passLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="25sp"
            android:paddingLeft="15dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:textColorHint="#2c3240"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/logIn"
            android:background="@drawable/buttonstyle"
            android:textColor="#e6ebfa"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>
